azure networking/networking.tf
resource "azurerm_virtual_network" "appnetwork" {
  name                = local.virtual_network.name
  location            = local.location
  resource_group_name = local.resource_group_name
  address_space       = [local.virtual_network.address_space]
  depends_on = [
    azurerm_resource_group.appgrp
  ]
}


resource "azurerm_subnet" "subnetA" {
  name                 = "SubnetA"
  resource_group_name  = local.resource_group_name
  virtual_network_name = local.virtual_network.name
  address_prefixes     = ["10.0.0.0/24"]
  depends_on = [
    azurerm_virtual_network.appnetwork
  ]
}

resource "azurerm_network_security_group" "appnsg" {
  name                = "app-nsg"
  location            = local.location
  resource_group_name = local.resource_group_name

  security_rule {
    name                       = "AllowRDP"
    priority                   = 300
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "AllowHTTP"
    priority                   = 400
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  depends_on = [
    azurerm_virtual_network.appnetwork
  ]
}

resource "azurerm_subnet_network_security_group_association" "appnsg-link" {
  subnet_id                 = azurerm_subnet.subnetA.id
  network_security_group_id = azurerm_network_security_group.appnsg.id

  depends_on = [
    azurerm_virtual_network.appnetwork,
    azurerm_network_security_group.appnsg
  ]
}




# resource "azurerm_virtual_network" "network" {
#   for_each = local.environment
#   name                = "${each.key}-network"
#   location            = local.location  
#   resource_group_name = local.resource_group_name
#   address_space       = [each.value]
#   depends_on = [
#     azurerm_resource_group.appgrp
#   ]  

#   subnet {
#     name           = "${each.key}subnet"
#     address_prefix = cidrsubnet(each.value,8,0)
#   }
# } 




# resource "azurerm_virtual_network" "network" {
#   for_each = local.environment
#   name                = "${each.key}-network"
#   location            = local.location  
#   resource_group_name = local.resource_group_name
#   address_space       = [each.value]
#   depends_on = [
#     azurerm_resource_group.appgrp
#   ]  

#   subnet {
#     name           = "${each.key}subnet"
#     address_prefix = cidrsubnet(each.value,8,0)
#   }
# } 

# resource "azurerm_network_security_group" "nsg" {
#   for_each = local.environment
#   name                = "${each.key}-nsg"
#   location            = local.location 
#   resource_group_name = local.resource_group_name

#   security_rule {
#     name                       = "AllowRDP"
#     priority                   = 300
#     direction                  = "Inbound"
#     access                     = "Allow"
#     protocol                   = "Tcp"
#     source_port_range          = "*"
#     destination_port_range     = "3389"
#     source_address_prefix      = "*"
#     destination_address_prefix = "*"
#   }

# depends_on = [
#     azurerm_virtual_network.network
#   ]
# }

# resource "azurerm_subnet_network_security_group_association" "nsg-link" {
#   for_each = local.environment
#   subnet_id                 = azurerm_virtual_network.network[each.key].subnet.*.id[0]
#   network_security_group_id = azurerm_network_security_group.nsg[each.key].id

#   depends_on = [
#     azurerm_virtual_network.network,
#     azurerm_network_security_group.nsg
#   ]
# }
